# labu

./: .gitignore  Initializations181.cpp  README.md  header181.h  main181.cpp
.github/workflows/: cmake.yml
MatPart181_2/: CMakeLists.txt  functions_arrays.cpp  functions_output.cpp  header_functions181.h
Test/: CMakeLists.txt  test.cpp
